# note.it-flask

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  gunicorn.conf.py  requirements.in  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
migrations/: script.py.mako
migrations/versions/: 0a1ebcbbe9ca_.py
src/noteit/: app.py  cli.py  forms.py  model.py  views.py  wsgi.py
src/noteit/commands/: __init__.py  remove_expired.py
src/noteit/extras/: __init__.py  http_method.py  uuid.py
src/noteit/static/css/: main.css
src/noteit/static/js/: calendar.js
src/noteit/templates/: _form_renderer.html  base.html  note_access.html  note_create.html  note_expired.html  note_view.html
tests/: conftest.py  database.py  helpers.py  test_app.py  test_note.py  test_note_model.py
