[metadata]
name = noteit
author = Krzysztof Przybyła
author_email = krzysztof.h.przybyla@gmail.com
url = https://github.com/kprzybyla/noteit
description = Note.It
long_description = file: README.rst
platform = linux
classifier =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts =
    note.it = noteit.cli:cli

[options.packages.find]
where = src

[flake8]
max-line-length = 99

[coverage:run]
branch = true
omit = */__version__.py

[coverage:report]
fail_under = 80
exclude_lines =
    pragma: no cover
    @overload

[coverage:html]
directory = coverage
